c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/null_ptr_static_array_initializer.c
int main(void)
{
    // you can't initialize a static array with a scalar, not even a null pointer constant
    static int arr[1] = 0;
    return arr[0];
}